--- a/order_generation/docs/complete_mapping_with_po.json
+++ b/order_generation/docs/complete_mapping_with_po.json
@@ -28,10 +28,11 @@
               "name": "AM800黑白粗细脚锉包装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM036-FD"
+              "purchase_order": "23AM058-FD"
             }
           ],
-          "purchase_order": "PO240226002"
+          "purchase_order": "25AM011",
+          "purchase_order_file": "副本25AM011-JY(1)(1).xlsx"
         }
       ]
     },
@@ -62,7 +63,8 @@
               "name": "am800电动脚锉包装+说明书",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "PO231026002"
+              "purchase_order": "PO241202001",
+              "purchase_order_file": "22AM008-AS.xlsx"
             }
           ],
           "purchase_order": "PO241202001",
@@ -77,10 +79,12 @@
               "name": "am800电动脚锉包装+说明书",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "PO231026002"
+              "purchase_order": "PO241202001",
+              "purchase_order_file": "22AM008-AS.xlsx"
             }
           ],
-          "purchase_order": "PO231026002"
+          "purchase_order": "PO241202001",
+          "purchase_order_file": "22AM007-AS.xlsx"
         }
       ]
     },
@@ -91,7 +95,8 @@
           "sku": "B10-ZMS3D-BR",
           "name": "",
           "accessories": [],
-          "purchase_order": "PO240315001"
+          "purchase_order": "PO240315001",
+          "purchase_order_file": "副本GX22040101(2)(1)(2).xlsx"
         },
         {
           "sku": "B10-ZMS3D-NEW",
@@ -252,7 +257,8 @@
               "name": "norsewood气垫猪鬃梳礼盒",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM030-KY"
+              "purchase_order": "23AM030-KY",
+              "purchase_order_file": "23AM030-KY-副本.xlsx"
             },
             {
               "sku": "ST1122-5",
@@ -262,7 +268,8 @@
               "purchase_order": "PO250612001"
             }
           ],
-          "purchase_order": "PO240418004"
+          "purchase_order": "25AM007",
+          "purchase_order_file": "副本25AM007-JX 返单(更新).xlsx"
         }
       ]
     },
@@ -278,7 +285,8 @@
               "name": "ecoed咖啡渣浴刷包装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM001-FD"
+              "purchase_order": "24AM001-FD",
+              "purchase_order_file": "24AM001-FD.xlsx"
             }
           ],
           "purchase_order": "PO240620014"
@@ -292,10 +300,12 @@
               "name": "原色绿色浴刷包装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM059-FD"
+              "purchase_order": "23AM059-FD",
+              "purchase_order_file": "23AM059-FD.xlsx"
             }
           ],
-          "purchase_order": "23AM045-JX"
+          "purchase_order": "23AM045-JX",
+          "purchase_order_file": "副本23AM045-JX(1).xls"
         },
         {
           "sku": "EC403-3",
@@ -306,10 +316,12 @@
               "name": "原色绿色浴刷包装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM059-FD"
+              "purchase_order": "23AM059-FD",
+              "purchase_order_file": "23AM059-FD.xlsx"
             }
           ],
-          "purchase_order": "23AM045-JX"
+          "purchase_order": "23AM045-JX",
+          "purchase_order_file": "副本23AM045-JX(1).xls"
         }
       ]
     },
@@ -338,10 +350,12 @@
               "name": "麦桔杆猪鬃鱼骨包装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM085-FD"
+              "purchase_order": "23AM085-FD",
+              "purchase_order_file": "AM085-FD.xlsx"
             }
           ],
-          "purchase_order": "23AM076-JX-1"
+          "purchase_order": "23AM076-JX-1",
+          "purchase_order_file": "23AM076(1).xlsx"
         }
       ]
     },
@@ -388,7 +402,8 @@
               "name": "ecoed化妆刷包装灰1",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "22AM012-FD"
+              "purchase_order": "22AM012-FD",
+              "purchase_order_file": "22AM012 FD.xlsx"
             }
           ]
         },
@@ -414,7 +429,8 @@
               "name": "ecoed化妆刷包装灰1",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "22AM012-FD"
+              "purchase_order": "22AM012-FD",
+              "purchase_order_file": "22AM012 FD.xlsx"
             }
           ]
         },
@@ -567,10 +583,11 @@
               "name": "洗头刷包装粉色细针两只",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM002"
+              "purchase_order": "25AM017-1",
+              "purchase_order_file": "副本25AM017-1.xlsx"
             }
           ],
-          "purchase_order": "24AM008-3"
+          "purchase_order": "PO240509002"
         },
         {
           "sku": "2EC-Blue",
@@ -589,10 +606,11 @@
               "name": "洗头刷包装蓝色细针两只",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM002-FD"
+              "purchase_order": "25AM017-1",
+              "purchase_order_file": "副本25AM017-1.xlsx"
             }
           ],
-          "purchase_order": "PO230908002"
+          "purchase_order": "PO240509002"
         },
         {
           "sku": "2EC-Green",
@@ -611,11 +629,12 @@
               "name": "洗头刷包装绿色细针两只",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM034-1"
+              "purchase_order": "25AM012-1",
+              "purchase_order_file": "25AM012-1.xlsx"
             }
           ],
-          "purchase_order": "PO250401005",
-          "purchase_order_file": "24AM034-JX 老款洗头刷绿色.xlsx"
+          "purchase_order": "25AM012",
+          "purchase_order_file": "修改单25AM012.xlsx"
         },
         {
           "sku": "2EC-Yellow",
@@ -634,10 +653,11 @@
               "name": "洗头刷包装原色细针两只",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM002"
+              "purchase_order": "25AM017-1",
+              "purchase_order_file": "副本25AM017-1.xlsx"
             }
           ],
-          "purchase_order": "PO230329001"
+          "purchase_order": "PO240509002"
         }
       ]
     },
@@ -659,7 +679,8 @@
               "name": "boxxbrush盒子pet",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM007"
+              "purchase_order": "23AM007",
+              "purchase_order_file": "23AM007-ZT.xlsx"
             }
           ],
           "purchase_order": "22AM032YF"
@@ -673,7 +694,8 @@
           "sku": "EC405-1-Blue",
           "name": "",
           "accessories": [],
-          "purchase_order": "PO231007002"
+          "purchase_order": "PO231007004",
+          "purchase_order_file": "副本更新增加内销23AM037-JX-1(2)(1).xlsx"
         },
         {
           "sku": "EC405-1-Green",
@@ -718,7 +740,7 @@
           "sku": "EC405-2-Blue",
           "name": "",
           "accessories": [],
-          "purchase_order": "24AM008-2"
+          "purchase_order": "24AM008"
         },
         {
           "sku": "EC405-2-Green",
@@ -735,7 +757,7 @@
           "sku": "EC405-2-Grey",
           "name": "",
           "accessories": [],
-          "purchase_order": "24AM008-2"
+          "purchase_order": "24AM008"
         }
       ]
     },
@@ -764,14 +786,16 @@
               "name": "ecoed吊粒洗头刷赠品",
               "ratio_main": "1",
               "ratio_accessory": "2",
-              "purchase_order": "PO230731001"
+              "purchase_order": "PO230731001",
+              "purchase_order_file": "23AM053(1).xlsx"
             },
             {
               "sku": "ECSB-1-1",
               "name": "洗头刷包装绿色粗针单只",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM066-FD"
+              "purchase_order": "23AM066-FD",
+              "purchase_order_file": "AM066-FD(1).xlsx"
             }
           ],
           "purchase_order": "PO240604001"
@@ -797,7 +821,8 @@
               "purchase_order_file": "24AM029-1-FD(1).xlsx"
             }
           ],
-          "purchase_order": "PO231007004"
+          "purchase_order": "PO231007004",
+          "purchase_order_file": "副本更新增加内销23AM037-JX-1(2)(1).xlsx"
         },
         {
           "sku": "EC405-3-Grey",
@@ -818,7 +843,8 @@
               "ratio_accessory": "1"
             }
           ],
-          "purchase_order": "PO231007004"
+          "purchase_order": "PO231007004",
+          "purchase_order_file": "副本更新增加内销23AM037-JX-1(2)(1).xlsx"
         }
       ]
     },
@@ -842,7 +868,7 @@
               "name": "ecoed洗头刷包装2只装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM056-KY"
+              "purchase_order": "24AM005-KY"
             }
           ],
           "purchase_order": "PO231007003"
@@ -864,10 +890,11 @@
               "name": "ecoed洗头刷包装2只装",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM056-KY"
+              "purchase_order": "24AM005-KY"
             }
           ],
-          "purchase_order": "PO231007003"
+          "purchase_order": "PO231007003",
+          "purchase_order_file": "副本更新增加内销23AM037-JX-1(2)(2).xlsx"
         },
         {
           "sku": "ECSB-TPR1",
@@ -886,7 +913,8 @@
               "name": "洗头刷TPR绿色",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM022-FD"
+              "purchase_order": "24AM022-FD",
+              "purchase_order_file": "FD-24AM022 (2).xlsx副本副本"
             }
           ],
           "purchase_order": "PO240620017"
@@ -1109,11 +1137,12 @@
               "name": "ecoed鱼骨梳包装2.0黄",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM002-KY"
+              "purchase_order": "25AM010-1",
+              "purchase_order_file": "25AM010-1(1)(1).xlsx"
             }
           ],
-          "purchase_order": "PO240510001",
-          "purchase_order_file": "23AM068-JX (6).xlsx"
+          "purchase_order": "PO250529002",
+          "purchase_order_file": "副本25AM010(1).xlsx"
         }
       ]
     },
@@ -1129,11 +1158,12 @@
               "name": "ecoed鱼骨梳包装2.0粉",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "24AM024-1"
+              "purchase_order": "25AM010-1",
+              "purchase_order_file": "25AM010-1(1)(1).xlsx"
             }
           ],
-          "purchase_order": "24AM024-JX",
-          "purchase_order_file": "24AM024-JX 粉色鱼骨梳.xlsx"
+          "purchase_order": "PO250529002",
+          "purchase_order_file": "副本25AM010(1).xlsx"
         }
       ]
     },
@@ -1205,7 +1235,8 @@
               "purchase_order": "PO250612001"
             }
           ],
-          "purchase_order": "PO240527001"
+          "purchase_order": "PO250430001",
+          "purchase_order_file": "副本25AM003-JX.xlsx"
         }
       ]
     },
@@ -1229,11 +1260,12 @@
               "name": "洗头刷包装原色细针单只",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM075-KY"
+              "purchase_order": "25AM017-1",
+              "purchase_order_file": "副本25AM017-1.xlsx"
             }
           ],
-          "purchase_order": "PO240625004",
-          "purchase_order_file": "23AM073-JX  (1).xlsx"
+          "purchase_order": "25AM005",
+          "purchase_order_file": "25AM005老款细针洗头刷返单.xlsx"
         }
       ]
     },
@@ -1261,8 +1293,8 @@
               "purchase_order_file": "副本25AM017-1.xlsx"
             }
           ],
-          "purchase_order": "PO240625003",
-          "purchase_order_file": "23AM073-JX  (1).xlsx"
+          "purchase_order": "25AM005",
+          "purchase_order_file": "25AM005老款细针洗头刷返单.xlsx"
         }
       ]
     },
@@ -1290,8 +1322,8 @@
               "purchase_order_file": "25AM006-1.xlsx"
             }
           ],
-          "purchase_order": "PO250401001",
-          "purchase_order_file": "24AM026-JX(1).xlsx"
+          "purchase_order": "25AM006",
+          "purchase_order_file": "金色铝桶返单25AM006-JX.xlsx"
         }
       ]
     },
@@ -1402,7 +1434,8 @@
               "name": "ecoed鱼骨梳包装2.0蓝",
               "ratio_main": "1",
               "ratio_accessory": "1",
-              "purchase_order": "23AM076-KY"
+              "purchase_order": "25AM010-1",
+              "purchase_order_file": "25AM010-1(1)(1).xlsx"
             }
           ],
           "purchase_order": "PO250701003",
@@ -1490,7 +1523,8 @@
               "purchase_order": "24AM048"
             }
           ],
-          "purchase_order": "PO241231001"
+          "purchase_order": "24AM040-QF",
+          "purchase_order_file": "24AM040-QF.xlsx"
         }
       ]
     },
