Build parent-child mapping from ASIN data

--- a/order_generation/docs/parent_child_mapping.json
+++ b/order_generation/docs/parent_child_mapping.json
@@ -1,34 +1,180 @@
 {
   "parents": {
-    "B10-MJB2": {
+    "Elasticbrush01": {
+      "name": "ecoed 可降解绿色鱼骨梳",
+      "children": [
+        "Elasticbrush01",
+        "Elasticbrush05",
+        "Elasticbrush02",
+        "Elasticbrush06"
+      ]
+    },
+    "EC404": {
+      "name": "Ecoed洗头刷绿色单只装细针",
+      "children": [
+        "EC404",
+        "ZW-YI7D-KWFL",
+        "7S-HA5T-5D0X",
+        "2EC-Green",
+        "EC405-1-Pink",
+        "5V-GW44-8VVX",
+        "2EC-Blue",
+        "2EC-Pink",
+        "2EC-Yellow"
+      ]
+    },
+    "ST1122-1": {
+      "name": "norsewood棕黑色气垫梳8.5*24.5*1.3",
+      "children": [
+        "ST1122-1",
+        "ST1122-3"
+      ]
+    },
+    "B10-MJB2-BK": {
       "name": "木头脚挫2只装 Foot Scraper Pedicure Foot File, Professional Foot Rasp File Foot Scrubber, Premium Callus Remover for Feet to Remove Dead Skin, Hard Skin, Cracked Heels, Perfect Foot Care Pedicure Tools (2 Pack)",
       "children": [
         "B10-MJB2-BK",
         "B10-MJB2-BK2"
       ]
     },
-    "B10-JMY802": {
-      "name": "洗脸仪",
-      "children": [
-        "B10-JMY802-BU",
-        "B10-JMY802-PK"
-      ]
-    },
-    "B10-MJQ1": {
+    "B10-MJQ1-BU": {
       "name": "电动磨脚器",
       "children": [
         "B10-MJQ1-BU",
         "B10-MJQ1-PK"
       ]
     },
-    "B10-ZMS3D": {
-      "name": "bass同款",
+    "EERB2.11.3": {
+      "name": "ellen evyse黑色弹性漆铝筒2只装2.1/1.3in",
       "children": [
-        "B10-ZMS3D-BR",
-        "B10-ZMS3D-NEW"
+        "EERB2.11.3",
+        "EERB2.11.7"
       ]
     },
-    "B10-TJ2": {
+    "EC-5001": {
+      "name": "ECOED粉色指甲钳套装新22",
+      "children": [
+        "EC-5001",
+        "B10-ZJJ5-PK"
+      ]
+    },
+    "ECSB-2Green": {
+      "name": "Ecoed洗头刷绿色组合装",
+      "children": [
+        "ECSB-2Green",
+        "ECSB-2Blue",
+        "EC405-3-Grey",
+        "EC405-3-Pink",
+        "EC405-3-Green",
+        "EC405-1-Blue"
+      ]
+    },
+    "EC403-3": {
+      "name": "Ecoed绿色浴刷",
+      "children": [
+        "EC403-3",
+        "EC403-2",
+        "EC403"
+      ]
+    },
+    "BB101-2": {
+      "name": "boxxbrush盒子梳玫红色",
+      "children": [
+        "BB101-2",
+        "BB101-3"
+      ]
+    },
+    "EC04-GREEN": {
+      "name": "化妆刷套装GREEN",
+      "children": [
+        "EC04-GREEN",
+        "EC04-NATURAL"
+      ]
+    },
+    "EC-D1-PINK": {
+      "name": "化妆刷大头 PINK",
+      "children": [
+        "EC-D1-PINK",
+        "EC-D1-CYAN",
+        "EC-D1-GREEN",
+        "EC-D1-NATURAL"
+      ]
+    },
+    "EC-X2-CYAN": {
+      "name": "化妆刷斜头CYAN",
+      "children": [
+        "EC-X2-CYAN",
+        "EC-X2-GREEN",
+        "EC-X2-PINK",
+        "EC-X2-NATURAL"
+      ]
+    },
+    "EC-P3-NATURAL": {
+      "name": "化妆刷平头NATURAL",
+      "children": [
+        "EC-P3-NATURAL",
+        "EC-P3-PINK",
+        "EC-P3-CYAN",
+        "EC-P3-GREEN"
+      ]
+    },
+    "FSC-WB02": {
+      "name": "FSC漂白榉木头梳(尼龙针)",
+      "children": [
+        "FSC-WB02",
+        "FSC-WB01"
+      ]
+    },
+    "C7524": {
+      "name": "黑色弹性漆铝筒35cm",
+      "children": [
+        "C7524",
+        "C7522",
+        "C7523"
+      ]
+    },
+    "Elasticbrush05": {
+      "name": "ecoed 可降解蓝色鱼骨梳",
+      "children": [
+        "Elasticbrush05",
+        "Elasticbrush06",
+        "Elasticbrush04",
+        "Elasticbrush03",
+        "Elasticbrush02",
+        "Elasticbrush01"
+      ]
+    },
+    "large": {
+      "name": "ecoed 陶瓷漆铝筒 1.3寸&2.1寸",
+      "children": [
+        "large",
+        "small",
+        "NF-NTN3-LC5B",
+        "OV-GAQM-PFGI"
+      ]
+    },
+    "3I-OEE1-VHAB": {
+      "name": "可降解树叶梳（粉色）",
+      "children": [
+        "3I-OEE1-VHAB",
+        "0L-REVP-RPUM"
+      ]
+    },
+    "B10-HB04-ADULTBU": {
+      "name": "4只装头梳",
+      "children": [
+        "B10-HB04-ADULTBU",
+        "B10-QDS2-GN"
+      ]
+    },
+    "ZJ22": {
+      "name": "木板纸巾架长",
+      "children": [
+        "ZJ22",
+        "ZJ21"
+      ]
+    },
+    "B10-TJ2-12": {
       "name": "金属支架12寸",
       "children": [
         "B10-TJ2-12",
@@ -36,135 +182,26 @@
         "B10-TJ2-20"
       ]
     },
-    "FSC": {
-      "name": "FSC漂白榉木头梳（木针）",
+    "B10-KJJ2-WT": {
+      "name": "可降解两只灰色",
       "children": [
-        "FSC-WB01",
-        "FSC-WB02"
+        "B10-KJJ2-WT",
+        "B10-KJJYZ-WT"
       ]
     },
-    "ST1122": {
-      "name": "norsewood棕黑色气垫梳8.5*24.5*1.3",
+    "AMCB-Blue": {
+      "name": "卷发定型梳蓝色",
       "children": [
-        "ST1122-1",
-        "ST1122-3"
-      ]
-    },
-    "EC403": {
-      "name": "Ecoed咖啡渣浴刷",
-      "children": [
-        "EC403",
-        "EC403-2",
-        "EC403-3"
-      ]
-    },
-    "EC": {
-      "name": "ECOED粉色指甲钳套装新22",
-      "children": [
-        "EC-5001",
-        "EC-ZZ01"
-      ]
-    },
-    "EC04": {
-      "name": "化妆刷套装GREEN",
-      "children": [
-        "EC04-GREEN",
-        "EC04-NATURAL"
-      ]
-    },
-    "EC-D1": {
-      "name": "化妆刷大头 PINK",
-      "children": [
-        "EC-D1-PINK",
-        "EC-D1-GREEN",
-        "EC-D1-NATURAL",
-        "EC-D1-CYAN"
-      ]
-    },
-    "EC-P3": {
-      "name": "化妆刷平头PINK",
-      "children": [
-        "EC-P3-PINK",
-        "EC-P3-GREEN",
-        "EC-P3-NATURAL",
-        "EC-P3-CYAN"
-      ]
-    },
-    "EC-X2": {
-      "name": "化妆刷斜头PINK",
-      "children": [
-        "EC-X2-PINK",
-        "EC-X2-GREEN",
-        "EC-X2-NATURAL",
-        "EC-X2-CYAN"
-      ]
-    },
-    "2EC": {
-      "name": "Ecoed洗头刷粉色两只装细针",
-      "children": [
-        "2EC-Pink",
-        "2EC-Blue",
-        "2EC-Green",
-        "2EC-Yellow"
-      ]
-    },
-    "BB101": {
-      "name": "boxxbrush盒子梳玫红色",
-      "children": [
-        "BB101-2",
-        "BB101-3"
-      ]
-    },
-    "EC405-1": {
-      "name": "ecoed 洗头刷405单只装蓝色粗针",
-      "children": [
-        "EC405-1-Blue",
-        "EC405-1-Green",
-        "EC405-1-Pink",
-        "EC405-1-Grey"
-      ]
-    },
-    "EC405-2": {
-      "name": "ecoed 洗头刷405两只装蓝色粗针",
-      "children": [
-        "EC405-2-Blue",
-        "EC405-2-Green",
-        "EC405-2-Pink",
-        "EC405-2-Grey"
-      ]
-    },
-    "EC405-3": {
-      "name": "ecoed 洗头刷405单只装蓝色50硬",
-      "children": [
-        "EC405-3-Blue",
-        "EC405-3-Green",
-        "EC405-3-Pink",
-        "EC405-3-Grey"
-      ]
-    },
-    "ECSB": {
-      "name": "Ecoed洗头刷绿色组合装",
-      "children": [
-        "ECSB-2Green",
-        "ECSB-2Blue",
-        "ECSB-TPR1"
-      ]
-    },
-    "NW": {
-      "name": "norsewood灰色榉木气垫猪鬃梳（bass）",
-      "children": [
-        "NW-GRAY1",
-        "NW-GRAY2",
-        "NW-GRAY3"
-      ]
-    },
-    "AMCB": {
-      "name": "尼龙卷发定型梳(蓝色)",
-      "children": [
-        "AMCB-black",
-        "AMCB-Pink",
         "AMCB-Blue",
-        "AMCB-01"
+        "AMCB-Pink"
+      ]
+    },
+    "ZW-YI7D-KWFL": {
+      "name": "Ecoed洗头刷蓝色单只装细针",
+      "children": [
+        "ZW-YI7D-KWFL",
+        "7S-HA5T-5D0X",
+        "5V-GW44-8VVX"
       ]
     }
   }
